@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

    class Simulator {
        - productLine : ProductPriorityLine
        - workstationsPerOperation : WorkstationsPerOperation
        - processedProducts : List<Product>
        - productTimes : Map<Product, Double>
        - totalProductionTime : double
        - operationTimes : Map<String, Double>
        - workstationTimes : Map<String, Double>
        - productMachineFlows : Map<String, List<String>>
        - machineFlowAnalyzer : MachineFlowAnalyzer
        - waitingQueue : Map<String, Queue<Product>>
        - waitingTimes : Map<Product, Double>

        + Simulator()
        + Simulator(WorkstationsPerOperation, ProductPriorityLine)
        + areAllQueuesEmpty() : boolean
        + runWithPriority(b : boolean) : void
        + runWithoutPriority(b : boolean) : void
        + printProductionStatistics() : void
        + printAnalysis() : void
        + getTotalProductionTime() : double
        + getProductionTimePerProduct() : List<Double>
    }


    class ProductPriorityLine {
    }

    class WorkstationsPerOperation {
    }


    class Product {
        + getIdItem() : String
        + getCurrentOperation() : Operation
        + moveToNextOperation() : boolean
        + setCurrentOperationIndex(index : int) : void
    }

    class Operation {
        + getId() : String
    }

    class Workstation {
        + getId() : String
        + isAvailable() : boolean
        + processProduct(product : Product) : void
        + setAvailable(available : boolean) : void
        + getTime() : double
        + getTotalExecutionTime() : double
        + getTotalOperationTime() : double
    }


class MachineFlowAnalyzer {
    + calculateMachineDependencies(flows : Map<String, List<String>>) : void
}

Simulator --> ProductPriorityLine : productLine
Simulator --> WorkstationsPerOperation : workstationsPerOperation
Simulator --> MachineFlowAnalyzer : machineFlowAnalyzer
Simulator --> Product : processedProducts
Simulator --> "0..*" Workstation : workstationsPerOperation
Simulator --> "0..*" Operation : waitingQueue

ProductPriorityLine <.. Simulator : productLine
WorkstationsPerOperation <.. Simulator : workstationsPerOperation
MachineFlowAnalyzer <.. Simulator : machineFlowAnalyzer

Simulator ..> Product : productTimes
Simulator ..> Operation : operationTimes
Simulator ..> Workstation : workstationTimes
Simulator ..> Product : waitingTimes

Product --> Operation : currentOperation
WorkstationsPerOperation --> Workstation : workstations
@enduml
